--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,29 +10,56 @@
     <script src="https://kit.fontawesome.com/327141d4b6.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="images/Frame.ico" type="image/x-icon">
 </head>
+
 <body>
     <header>
-            <section class="nav">
-                <nav class="nav-container">
-                    <div class="logo-container">
-                        <img src="images/Frame.ico" alt="">
-        
-                        <p><span class="gamer">G</span>amer</p>             
-                    </div>
-                    <div class="nav-item-container">
-                           <a href="">About Us</a>
-                           <a href="">Developers</a>
-                           <a class="follow" href="">Follow Us On<i class="fa-brands fa-youtube" style="color: #ff0000;"></i> <i class="fa-brands fa-tiktok"></i>
-                            </a>
-                    </div>
-                  </nav>
-            </section>
-    </header>
-    <main>
+        <section class="nav">
+            <nav class="nav-container">
+                <div class="logo-container">
+                    <img src="images/Frame.ico" alt="">
 
+                    <p><span class="gamer">G</span>amer</p>
+                </div>
+                <div class="nav-item-container">
+                    <a href="">About Us</a>
+                    <a href="">Developers</a>
+                    <a class="follow" href="">Follow Us On<i class="fa-brands fa-youtube" style="color: #ff0000;"></i>
+                        <i class="fa-brands fa-tiktok"></i>
+                    </a>
+                </div>
+            </nav>
+        </section>
+    </header>
+
+
+    <main>
+        <section class="banner-container">
+            <div class="banner-title">
+                <h1>Play Like The</h1>
+                <p class="goat">G.O.A.T.</p>
+                <p><i class="fa-sharp fa-solid fa-circle-play" style="color: #F948B2;"></i> 1-Click instant play</p>
+                <p><i class="fa-sharp fa-solid fa-download" style="color: #F948B2;"></i> No Download</p>
+                <p><i class="fa-solid fa-user-group"></i> 1000s of supported online games</p>
+
+            <div class="banner-btn">
+                    <button class="btn-primary">SIGN IN</button>
+                    <button class="btn">GO ROUGE</button>
+            </div>
+
+            </div>
+            
+            <div class="banner-img">
+                <img class="img" src="images/Group 18.png" alt="">
+
+            </div>
+        </section>
     </main>
+
+
+
     <footer>
 
     </footer>
 </body>
+
 </html>
