--- a/index.html
+++ b/index.html
@@ -32,9 +32,10 @@
     </header>
 
 
-    <main>
-        <section class="banner-container">
-            <div class="banner-title">
+<main>
+        <!-- banner section started -->
+    <section class="banner-container">
+         <div class="banner-title">
                 <h1>Play Like The</h1>
                 <p class="goat">G.O.A.T.</p>
                 <p><i class="fa-sharp fa-solid fa-circle-play" style="color: #F948B2;"></i> 1-Click instant play</p>
@@ -42,17 +43,48 @@
                 <p><i class="fa-solid fa-user-group"></i> 1000s of supported online games</p>
 
             <div class="banner-btn">
-                    <button class="btn-primary">SIGN IN</button>
-                    <button class="btn">GO ROUGE</button>
+                <button class="btn-primary">SIGN IN</button>
+                 <button class="btn">GO ROUGE</button>
             </div>
 
-            </div>
+        </div>
             
-            <div class="banner-img">
+        <div class="banner-img">
                 <img class="img" src="images/Group 18.png" alt="">
-
-            </div>
+         </div>
         </section>
+
+
+        <!-- video section started -->
+
+      <div class="video-content">
+        <h3 class="video-title">Online Games <span class="funny"> Funny Videos</span></h3>
+        <p class="video-description">A Collection of Hilarious Videos to Brighten Your Day</p>
+      </div>
+
+        <section class="video-container">
+            <div class="video-1">
+                <img src="images/Rectangle 4.png" alt="">
+                <p>No Download. No Installs. Play 
+                    games <br> Instantly on Gamer.</p>
+            </div>
+            <div>
+                <img src="images/Rectangle 5.png" alt="">
+                <p>Did you score? #unblockedgames 
+                    #school</p>
+            </div>
+            <div>
+                <img src="images/Rectangle 6.png" alt="">
+                <p>Busted gaming on school laptop, <br>
+                    but you are still lit.</p>
+            </div>
+            <div>
+                <img src="images/Rectangle 7.png" alt="">
+                <p>Breaking game records 
+                    like OG</p>
+            </div>
+    </section>
+    <!-- video section ended -->
     </main>
 
 
