--- a/index.html
+++ b/index.html
@@ -85,6 +85,30 @@
             </div>
     </section>
     <!-- video section ended -->
+
+    <!-- features section started -->
+
+    <section class="feature">
+        <div class="feature-content"> 
+            <h1 class="feature-title"> <span class="play">Play Instantly,</span><br>
+                No Downloads <br>
+                No Installs.</h1>
+                <p class="feature-description">Play games online for free without <br>
+                    downloading. Just click the Play button <br>
+                    and play instantly in your browser.</p>
+        </div>
+
+        <div class="feature-profile"> 
+                <img class="img" src="images/Rectangle 55.png" alt="">
+
+                <div class="taking">
+                    <img class="img-1" src="images/Rectangle 66.png" alt="">
+                </div>
+        </div>
+    </section>
+
+
+
     </main>
 
 
