--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
             <nav class="nav-container">
                 <div class="logo-container">
                     <img src="images/Frame.ico" alt="">
-
                     <p><span class="gamer">G</span>amer</p>
                 </div>
                 <div class="nav-item-container">
@@ -50,7 +49,7 @@
         </div>
             
         <div class="banner-img">
-                <img class="img" src="images/Group 18.png" alt="">
+                <img class="img" src="images/banner.png" alt="">
          </div>
         </section>
 
@@ -64,22 +63,22 @@
 
         <section class="video-container">
             <div class="video-1">
-                <img src="images/Rectangle 4.png" alt="">
+                <img src="images/r4.png" alt="">
                 <p>No Download. No Installs. Play 
                     games <br> Instantly on Gamer.</p>
             </div>
             <div>
-                <img src="images/Rectangle 5.png" alt="">
+                <img src="images/r5.png" alt="">
                 <p>Did you score? #unblockedgames 
                     #school</p>
             </div>
             <div>
-                <img src="images/Rectangle 6.png" alt="">
+                <img src="images/r6.png" alt="">
                 <p>Busted gaming on school laptop, <br>
                     but you are still lit.</p>
             </div>
             <div>
-                <img src="images/Rectangle 7.png" alt="">
+                <img src="images/r7.png" alt="">
                 <p>Breaking game records 
                     like OG</p>
             </div>
@@ -99,14 +98,46 @@
         </div>
 
         <div class="feature-profile"> 
-                <img class="img" src="images/Rectangle 55.png" alt="">
+                <img class="img" src="images/r55.png" alt="">
 
                 <div class="taking">
-                    <img class="img-1" src="images/Rectangle 66.png" alt="">
+                    <img class="img-1" src="images/r66.png" alt="">
                 </div>
         </div>
     </section>
 
+<!-- features section ended     -->
+
+<!-- game section stared -->
+<section class="games">
+    <div class="games-container">
+        <div class="card">
+            <img src="images/g11.png" alt="">
+            <p>Action Games</p>
+        </div>
+        <div class="card">
+            <img src="images/g12.png" alt="">
+            <p>Adventure Games</p>
+        </div>
+        <div class="card">
+            <img src="images/g13.png" alt="">
+            <p>Arcade Games</p>
+        </div>
+        <div class="card">
+            <img src="images/g14.png" alt="">
+            <p>Educational Games</p>
+        </div>
+        <div class="card">
+            <img src="images/g15.png" alt="">
+            <p>Word Games</p>
+        </div>
+    </div>
+
+    <div class="games-content">
+
+    </div>
+</section>
+<!-- game section ended -->
 
 
     </main>
