--- a/index.html
+++ b/index.html
@@ -98,10 +98,12 @@
         </div>
 
         <div class="feature-profile"> 
-                <img class="img" src="images/r55.png" alt="">
+               <div class="taking-1" >
+                <img class="img-1" class="img" src="images/r55.png" alt="">
+               </div>
 
-                <div class="taking">
-                    <img class="img-1" src="images/r66.png" alt="">
+                <div class="taking-2">
+                    <img class="img-2" src="images/r66.png" alt="">
                 </div>
         </div>
     </section>
@@ -109,7 +111,7 @@
 <!-- features section ended     -->
 
 <!-- game section stared -->
-<section class="games">
+<!-- <section class="games">
     <div class="games-container">
         <div class="card">
             <img src="images/g11.png" alt="">
@@ -133,10 +135,26 @@
         </div>
     </div>
 
-    <div class="games-content">
 
+    <div class="games-content">
+        <div class="card">
+            <img src="images/g16.png" alt="">
+            <p>Role Palying Games</p>
+        </div>
+        <div class="card">
+            <img src="images/g17.png" alt="">
+            <p>Music & Audio Games</p>
+        </div>
+        <div class="card">
+            <img src="images/g18.png" alt="">
+            <p>Puzzle Games</p>
+        </div>
+        <div class="card">
+            <img src="images/g19.png" alt="">
+            <p>Strategy Games</p>
+        </div>
     </div>
-</section>
+</section> -->
 <!-- game section ended -->
 
 
