--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 <!-- features section ended     -->
 
 <!-- game section stared -->
-<!-- <section class="games">
+<section class="games">
     <div class="games-container">
         <div class="card">
             <img src="images/g11.png" alt="">
@@ -133,10 +133,6 @@
             <img src="images/g15.png" alt="">
             <p>Word Games</p>
         </div>
-    </div>
-
-
-    <div class="games-content">
         <div class="card">
             <img src="images/g16.png" alt="">
             <p>Role Palying Games</p>
@@ -152,9 +148,10 @@
         <div class="card">
             <img src="images/g19.png" alt="">
             <p>Strategy Games</p>
-        </div>
     </div>
-</section> -->
+</div>
+
+</section>
 <!-- game section ended -->
 
 
