--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gaming Information</title>
+    <title>Gaming Hub</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
     <script src="https://kit.fontawesome.com/327141d4b6.js" crossorigin="anonymous"></script>
@@ -17,7 +17,7 @@
             <nav class="nav-container">
                 <div class="logo-container">
                     <img src="images/Frame.ico" alt="">
-                    <p><span class="gamer">G</span>amer</p>
+                    <p><span class="gamer">Gaming</span>Hub</p>
                 </div>
                 <div class="nav-item-container">
                     <a href="">About Us</a>
@@ -150,18 +150,44 @@
             <p>Strategy Games</p>
     </div>
 </div>
-
 </section>
 <!-- game section ended -->
+</main>
 
+ <footer>
+       <div class="footer">
+        <div class="logo-container" >
+            <img src="images/Frame.ico" alt="">
+            <p style="color: #fff;"><span class="gamer">Gaming</span>Hub</p>
+        </div>
+        <div class="services" style="color: #fff;">
+            <p>Our Story</p>
+            <p>Games</p>
+            <p>Web Games</p>
+            <p>Careers</p>
+            <p>Support</p>
+            <p>My Account</p>
+        </div>
+        <div class="icons">
+           <i class="fa-brands fa-facebook" style="color: #fff;"></i>
+           <i class="fa-brands fa-instagram"  style="color: #fff;"></i>
+            <i class="fa-brands fa-twitter" style="color: #fff;" ></i>
+            <i class="fa-brands fa-youtube" style="color: #fff;"></i>
+            <i class="fa-brands fa-linkedin-in" style="color: #fff;"></i>
+            <i class="fa-brands fa-whatsapp" style="color: #fff;"></i>
+        </div>
+        <div class="teams">
+            <P>Terms and Conditions</P>
+            <P>Privacy Policy</P>
+            <p>Cookie Policy</p>
+            <p>Privacy Settings</p>
+        </div>
+        <div class="copy">
+            <p>Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</p>
+        </div>
 
-    </main>
-
-
-
-    <footer>
-
-    </footer>
+       </div>
+</footer>
 </body>
 
 </html>
