--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <p class="goat">G.O.A.T.</p>
                 <p><i class="fa-sharp fa-solid fa-circle-play" style="color: #F948B2;"></i> 1-Click instant play</p>
                 <p><i class="fa-sharp fa-solid fa-download" style="color: #F948B2;"></i> No Download</p>
-                <p><i class="fa-solid fa-user-group"></i> 1000s of supported online games</p>
+                <p><i class="fa-solid fa-user-group" style="color: #F948B2;"></i> 1000s of supported online games</p>
 
             <div class="banner-btn">
                 <button class="btn-primary">SIGN IN</button>
@@ -156,7 +156,7 @@
 
  <footer>
        <div class="footer">
-        <div class="logo-container" >
+        <div class="logo-style" >
             <img src="images/Frame.ico" alt="">
             <p style="color: #fff;"><span class="gamer">Gaming</span>Hub</p>
         </div>
