--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <p><span class="gamer">Gaming</span>Hub</p>
                 </div>
                 <div class="nav-item-container">
-                    <a href="">About Us</a>
+                    <a class="about" href="">About Us</a>
                     <a href="">Developers</a>
                     <a class="follow" href="">Follow Us On<i class="fa-brands fa-youtube" style="color: #ff0000;"></i>
                         <i class="fa-brands fa-tiktok"></i>
