--- a/index.html
+++ b/index.html
@@ -41,16 +41,16 @@
                 <p><i class="fa-sharp fa-solid fa-download" style="color: #F948B2;"></i> No Download</p>
                 <p><i class="fa-solid fa-user-group" style="color: #F948B2;"></i> 1000s of supported online games</p>
     
-            <div class="banner-btn">
+             <div class="banner-btn">
                 <button class="btn-primary">SIGN IN</button>
                  <button class="btn">GO ROUGE</button>
-            </div>
-    </div>
+             </div>
+        </div>
             
         <div class="banner-img">
                 <img class="img" src="images/banner.png" alt="">
          </div>
-        </section>
+    </section>
 
 
         <!-- video section started -->
@@ -66,17 +66,17 @@
                 <p>No Download. No Installs. Play 
                     games <br> Instantly on Gamer.</p>
             </div>
-            <div>
+            <div class="video-1">
                 <img src="images/r5.png" alt="">
                 <p>Did you score? #unblockedgames 
                     #school</p>
             </div>
-            <div>
+            <div class="video-1">
                 <img src="images/r6.png" alt="">
                 <p>Busted gaming on school laptop, <br>
                     but you are still lit.</p>
             </div>
-            <div>
+            <div class="video-1">
                 <img src="images/r7.png" alt="">
                 <p>Breaking game records 
                     like OG</p>
@@ -172,8 +172,8 @@
            <i class="fa-brands fa-instagram"  style="color: #fff;"></i>
             <i class="fa-brands fa-twitter" style="color: #fff;" ></i>
             <i class="fa-brands fa-youtube" style="color: #fff;"></i>
-            <i class="fa-brands fa-linkedin-in" style="color: #fff;"></i>
-            <i class="fa-brands fa-whatsapp" style="color: #fff;"></i>
+            <i class="fa-brands fa-google" style="color: #fff;"></i>
+            <i class="fa-brands fa-github" style="color: #fff;"></i>
         </div>
         <div class="teams">
             <P>Terms and Conditions</P>
