--- a/index.html
+++ b/index.html
@@ -31,162 +31,183 @@
     </header>
 
 
-<main>
+    <main>
         <!-- banner section started -->
-    <section class="banner-container">
-         <div class="banner-title">
+        <section class="banner-container">
+            <div class="banner-title">
                 <h1>Play Like The</h1>
                 <p class="goat">G.O.A.T.</p>
                 <p><i class="fa-sharp fa-solid fa-circle-play" style="color: #F948B2;"></i> 1-Click instant play</p>
                 <p><i class="fa-sharp fa-solid fa-download" style="color: #F948B2;"></i> No Download</p>
                 <p><i class="fa-solid fa-user-group" style="color: #F948B2;"></i> 1000s of supported online games</p>
 
-             <div class="banner-btn">
-                <button class="btn-primary">SIGN IN</button>
-                 <button class="btn">GO ROUGE</button>
-             </div>
-    </div>
-            
-        <div class="banner-img">
+                <div class="banner-btn">
+                    <button class="btn-primary">SIGN IN</button>
+                    <button class="btn">GO ROUGE</button>
+                </div>
+            </div>
+
+            <div class="banner-img">
                 <img class="img" src="images/banner.png" alt="">
-         </div>
-    </section>
+            </div>
+        </section>
 
 
         <!-- video section started -->
 
-      <div class="video-content">
-        <h3 class="video-title">Online Games <span class="funny"> Funny Videos</span></h3>
-        <p class="video-description">A Collection of Hilarious Videos to Brighten Your Day</p>
-      </div>
+        <div class="video-content">
+            <h3 class="video-title">Online Games <span class="funny"> Funny Videos</span></h3>
+            <p class="video-description">A Collection of Hilarious Videos to Brighten Your Day</p>
+        </div>
 
         <section class="video-container">
-            <div class="video-1">
-                <img src="images/r4.png" alt="">
-                <p>No Download. No Installs. Play 
-                    games <br> Instantly on Gamer.</p>
+            <div class="container">
+                <div class="image">
+                    <img src="images/r4.png" alt="">
+                </div>
+                <div class="text">
+                    <i class="fa-sharp fa-solid fa-circle-play" style="padding-top: 150px; font-size: 30px; color: #fff"></i>
+                    <h1 style="padding-top: 1px;">Watch Now</h1>
+                </div>
+                <p>No Download. No Installs. Play games Instantly on Gamer.</p>
             </div>
-            <div class="video-1">
-                <img src="images/r5.png" alt="">
-                <p>Did you score? #unblockedgames 
+            <div class="container">
+                <div class="image">
+                    <img src="images/r5.png" alt="">
+                </div>
+                <div class="text">
+                    <i class="fa-sharp fa-solid fa-circle-play" style="padding-top: 150px; font-size: 30px; color: #fff"></i>
+                    <h1 style="padding-top: 1px;">Watch Now</h1>
+                </div>
+                <p>Breaking game records like OG</p>
+            </div>
+            <div class="container">
+                <div class="image">
+                    <img src="images/r6.png" alt="">
+                </div>
+                <div class="text">
+                    <i class="fa-sharp fa-solid fa-circle-play" style="padding-top: 150px; font-size: 30px; color: #fff"></i>
+                    <h1 style="padding-top: 1px;">Watch Now</h1>
+                </div>
+                <p>Busted gaming on school laptop, but you are still lit.</p>
+            </div>
+            <div class="container">
+                <div class="image">
+                    <img src="images/r7.png" alt="">
+                </div>
+                <div class="text">
+                    <i class="fa-sharp fa-solid fa-circle-play" style="padding-top: 150px; font-size: 30px; color: #fff;"></i>
+                    <h1 style="padding-top: 1px;">Watch Now</h1>
+                </div>
+                <p>Did you score? #unblockedgames
                     #school</p>
             </div>
-            <div class="video-1">
-                <img src="images/r6.png" alt="">
-                <p>Busted gaming on school laptop, <br>
-                    but you are still lit.</p>
-            </div>
-            <div class="video-1">
-                <img src="images/r7.png" alt="">
-                <p>Breaking game records 
-                    like OG</p>
-            </div>
-    </section>
-    <!-- video section ended -->
+        </section>
+        <!-- video section ended -->
 
-    <!-- features section started -->
+        <!-- features section started -->
 
-    <section class="feature">
-        <div class="feature-content"> 
-            <h1 class="feature-title"> <span class="play">Play Instantly,</span><br>
-                No Downloads <br>
-                No Installs.</h1>
+        <section class="feature">
+            <div class="feature-content">
+                <h1 class="feature-title"> <span class="play">Play Instantly,</span><br>
+                    No Downloads <br>
+                    No Installs.</h1>
                 <p class="feature-description">Play games online for free without <br>
                     downloading. Just click the Play button <br>
                     and play instantly in your browser.</p>
-        </div>
+            </div>
 
-        <div class="feature-profile"> 
-               <div class="taking-1" >
-                <img class="img-1" class="img" src="images/r55.png" alt="">
-               </div>
+            <div class="feature-profile">
+                <div class="taking-1">
+                    <img class="img-1" class="img" src="images/r55.png" alt="">
+                </div>
 
                 <div class="taking-2">
                     <img class="img-2" src="images/r66.png" alt="">
                 </div>
-        </div>
-    </section>
+            </div>
+        </section>
 
-<!-- features section ended     -->
+        <!-- features section ended     -->
 
-<!-- game section stared -->
-<section class="games">
-    <div class="games-container">
-        <div class="card">
-            <img src="images/g11.png" alt="">
-            <p>Action Games</p>
-        </div>
-        <div class="card">
-            <img src="images/g12.png" alt="">
-            <p>Adventure Games</p>
-        </div>
-        <div class="card">
-            <img src="images/g13.png" alt="">
-            <p>Arcade Games</p>
-        </div>
-        <div class="card">
-            <img src="images/g14.png" alt="">
-            <p>Educational Games</p>
-        </div>
-        <div class="card">
-            <img src="images/g15.png" alt="">
-            <p>Word Games</p>
-        </div>
-        <div class="card">
-            <img src="images/g16.png" alt="">
-            <p>Role Palying Games</p>
-        </div>
-        <div class="card">
-            <img src="images/g17.png" alt="">
-            <p>Music & Audio Games</p>
-        </div>
-        <div class="card">
-            <img src="images/g18.png" alt="">
-            <p>Puzzle Games</p>
-        </div>
-        <div class="card">
-            <img src="images/g19.png" alt="">
-            <p>Strategy Games</p>
-    </div>
-</div>
-</section>
-<!-- game section ended -->
-</main>
+        <!-- game section stared -->
+        <section class="games">
+            <div class="games-container">
+                <div class="card">
+                    <img src="images/g11.png" alt="">
+                    <p>Action Games</p>
+                </div>
+                <div class="card">
+                    <img src="images/g12.png" alt="">
+                    <p>Adventure Games</p>
+                </div>
+                <div class="card">
+                    <img src="images/g13.png" alt="">
+                    <p>Arcade Games</p>
+                </div>
+                <div class="card">
+                    <img src="images/g14.png" alt="">
+                    <p>Educational Games</p>
+                </div>
+                <div class="card">
+                    <img src="images/g15.png" alt="">
+                    <p>Word Games</p>
+                </div>
+                <div class="card">
+                    <img src="images/g16.png" alt="">
+                    <p>Role Palying Games</p>
+                </div>
+                <div class="card">
+                    <img src="images/g17.png" alt="">
+                    <p>Music & Audio Games</p>
+                </div>
+                <div class="card">
+                    <img src="images/g18.png" alt="">
+                    <p>Puzzle Games</p>
+                </div>
+                <div class="card">
+                    <img src="images/g19.png" alt="">
+                    <p>Strategy Games</p>
+                </div>
+            </div>
+        </section>
+        <!-- game section ended -->
+    </main>
 
- <footer>
-       <div class="footer">
-        <div class="logo-style" >
-            <img src="images/Frame.ico" alt="">
-            <p style="color: #fff;"><span class="gamer">Gaming</span>Hub</p>
-        </div>
-        <div class="services" style="color: #fff;">
-            <p>Our Story</p>
-            <p>Games</p>
-            <p>Web Games</p>
-            <p>Careers</p>
-            <p>Support</p>
-            <p>My Account</p>
-        </div>
-        <div class="icons">
-           <i class="fa-brands fa-facebook" style="color: #fff;"></i>
-           <i class="fa-brands fa-instagram"  style="color: #fff;"></i>
-            <i class="fa-brands fa-twitter" style="color: #fff;" ></i>
-            <i class="fa-brands fa-youtube" style="color: #fff;"></i>
-            <i class="fa-brands fa-google" style="color: #fff;"></i>
-            <i class="fa-brands fa-github" style="color: #fff;"></i>
-        </div>
-        <div class="teams">
-            <P>Terms and Conditions</P>
-            <P>Privacy Policy</P>
-            <p>Cookie Policy</p>
-            <p>Privacy Settings</p>
-        </div>
-        <div class="copy">
-            <p>Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</p>
-        </div>
+    <footer>
+        <div class="footer">
+            <div class="logo-style">
+                <img src="images/Frame.ico" alt="">
+                <p style="color: #fff;"><span class="gamer">Gaming</span>Hub</p>
+            </div>
+            <div class="services" style="color: #fff;">
+                <p>Our Story</p>
+                <p>Games</p>
+                <p>Web Games</p>
+                <p>Careers</p>
+                <p>Support</p>
+                <p>My Account</p>
+            </div>
+            <div class="icons">
+                <i class="fa-brands fa-facebook" style="color: #fff;"></i>
+                <i class="fa-brands fa-instagram" style="color: #fff;"></i>
+                <i class="fa-brands fa-twitter" style="color: #fff;"></i>
+                <i class="fa-brands fa-youtube" style="color: #fff;"></i>
+                <i class="fa-brands fa-google" style="color: #fff;"></i>
+                <i class="fa-brands fa-github" style="color: #fff;"></i>
+            </div>
+            <div class="teams">
+                <P>Terms and Conditions</P>
+                <P>Privacy Policy</P>
+                <p>Cookie Policy</p>
+                <p>Privacy Settings</p>
+            </div>
+            <div class="copy">
+                <p>Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</p>
+            </div>
 
-       </div>
-</footer>
+        </div>
+    </footer>
 </body>
 
 </html>
